2014-04-10	lav

	* textpoin.cc: don't allow text points beyond EOF.

2013-11-07	lav

	* loadsave.cc, kern.cc: clear tmp R/O flag in EmptyText.
	* user.cc, loadsave.cc, kern.cc, edit.h: use symbolic View constants.

2013-10-09	lav

	* chset.cc: memoize visualize_wchar results.
	* block.cc, edit.h: get rid of DosEol flag; add support for MAC EOL (single CR).
	* ext.cc: (DOS_UNIX) improve performance.
	* kern.cc: MAC EOL support; check for split MB chars after insert/delete;
	  improve performance of EolAt/BolAt;
	* keymap.cc: buffer incomplete MB chars and feed them at once.
	* loadsave.cc: guess MAC EOLs.
	* mb.cc, mb.h: improve performance of MBCheckLeftAt; (MBCharSplit) new flag;
	* screen.cc: display MAC EOL mode as 'M'.
	* tables.cc: don't include legacy tables for ancient terminals.
	* textpoin.cc, textpoin.h: (CheckSplit) new function; more precise
	  tracking of split MB chars; improved FindLineCol performance.
	* user.cc: fixed inserting a new line on line-down in text mode.

2013-10-01	lav

	* edit.h, kern.cc: (write_loop) new function to handle partial writes;
	  use it in WriteBlock function.
	* loadsave.cc: use write_loop; increase file copy buffer size;
	  show warning if file size changes as we copy the file.

2013-09-27	lav

	* screen.cc: save errno message carefully.
	* undo.cc, undo.h, loadsave.cc: set all undo versions as "modified" on save.

2013-07-09	lav

	* block.cc: fixed spurious error message.

2013-07-03	rgeissert

	* history.cc: Fix minor memory leak.

2013-01-31	lav

	* textpoin.cc, textpoin.h: (CHAR_SPLIT) new flag; fixed long standing
	  bug with split multibyte characters.

2012-05-03	lav

	* file.cc: use memmove to copy overlapping buffers.
	* mouse.cc, user.cc, user.h: add scrolling support.
	* textpoin.cc: don't scan wide chars left, use LineBegin instead.

2011-07-06	lav

	* file.cc: display a better status when selecting a file.
	* user.cc: add .css comments.
	* rus.cc: include config.h