@@ -1,3 +1,9 @@
+2014-04-24	lav
+
+	* highli.cc: don't remove overlapped elements too early as we don't
+	  know all the elements yet and the overlapping element can be
+	  overlapped itself later on.
+
 2014-04-10	lav
 
 	* textpoin.cc: don't allow text points beyond EOF.
